force-app/main/default/objects/Line_Item__c/fields/Actual_Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Beginning_Balance__c</fullName>
    <label>Actual Beginning Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>