force-app/main/default/objects/Line_Item__c/fields/Actual_Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ending_Balance__c</fullName>
    <label>Actual Ending Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>