force-app/main/default/objects/Line_Item__c/fields/Actual_Ending_Balance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Ending_Balance_Percent__c</fullName>
    <label>Actual Ending Balance Percent</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>