force-app/main/default/objects/Line_Item__c/fields/Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume__c</fullName>
    <label>Actual Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>