force-app/main/default/objects/Line_Item__c/fields/Base_Consultant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Base_Consultant_Fee__c</fullName>
    <formula>IF( RecordType.Name != &#39;Storage Line Item&#39;
  , IF( ISBLANK(Parent_Line_Item__c)
      , null
      , BLANKVALUE(Parent_Line_Item__r.Consultant_Fee_Rollup__c, 0)
    )
  , null
)</formula>
    <inlineHelpText>For fixed contract line items: related base contract consultant fee</inlineHelpText>
    <label>Base Consultant Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>