force-app/main/default/objects/Line_Item__c/fields/Base_Margin__c.field-meta.xml
<CustomField>
    <fullName>Base_Margin__c</fullName>
    <formula>IF( RecordType.Name != &#39;Storage Line Item&#39;
  , IF( ISBLANK(Parent_Line_Item__c)
      , null
      , BLANKVALUE(Parent_Line_Item__r.Total_Margin_Rollup__c, 0)
    )
  , null
)</formula>
    <inlineHelpText>For fixed contract line items: related base contract margin</inlineHelpText>
    <label>Base Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>