force-app/main/default/objects/Line_Item__c/fields/Base_Pricing_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Base_Pricing_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SP - This field should be deleted. Parent_Line_Item should be used. 

refers to the base price contract line item that ties to the fixed tier line item</description>
    <inlineHelpText>This field should be deleted/removed.</inlineHelpText>
    <label>X Base Pricing Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Line Items (Base Pricing Line Item)</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>