force-app/main/default/objects/Line_Item__c/fields/Base_Pricing_Storage_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Base_Pricing_Storage_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SP - This field should be deleted. Parent_Line_Item should be used. 

line item on the storage contract</description>
    <inlineHelpText>This field should be deleted/removed.</inlineHelpText>
    <label>X Base Pricing Storage Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Line Items (Base Pricing Storage Line Item)</relationshipLabel>
    <relationshipName>Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>