force-app/main/default/objects/Line_Item__c/fields/Basis_Lock_Volume__c.field-meta.xml
<CustomField>
    <fullName>Basis_Lock_Volume__c</fullName>
    <label>Basis Lock Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>