force-app/main/default/objects/Line_Item__c/fields/Beginning_Balance__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance__c</fullName>
    <label>Beginning Balance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>