force-app/main/default/objects/Line_Item__c/fields/Beginning_Balance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Beginning_Balance_Percent__c</fullName>
    <label>Beginning Balance Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>