force-app/main/default/objects/Line_Item__c/fields/CES_Margin__c.field-meta.xml
<CustomField>
    <fullName>CES_Margin__c</fullName>
    <formula>IF( ISBLANK(Consultant_Pctg__c), BLANKVALUE(Total_Margin_Rollup__c, 0), BLANKVALUE(Total_Margin_Rollup__c, 0) - BLANKVALUE(Consultant_Fee_Rollup__c, 0) )</formula>
    <label>X CES Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>