force-app/main/default/objects/Line_Item__c/fields/CES_Margin_Wacog__c.field-meta.xml
<CustomField>
    <fullName>CES_Margin_Wacog__c</fullName>
    <formula>IF( ISBLANK(Consultant_Pctg__c), BLANKVALUE(Total_Margin_Rollup_Wacog__c, 0), BLANKVALUE(Total_Margin_Rollup_Wacog__c, 0) - BLANKVALUE(Consultant_Fee_Rollup_Wacog__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X CES Margin Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>