force-app/main/default/objects/Line_Item__c/fields/Consultant_Pctg__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Pctg__c</fullName>
    <label>Consultant %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>