force-app/main/default/objects/Line_Item__c/fields/Contract_Active_Flg__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active_Flg__c</fullName>
    <formula>Contract__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Active Flg</label>
    <type>Checkbox</type>
</CustomField>