force-app/main/default/objects/Line_Item__c/fields/Contract_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Month__c</fullName>
    <label>Contract Month</label>
    <type>Date</type>
</CustomField>