force-app/main/default/objects/Line_Item__c/fields/Contract_Pending_TC_Revision__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pending_TC_Revision__c</fullName>
    <description>Related contract is pending TC Revision</description>
    <formula>Contract__r.Pending_TC_Revision__c</formula>
    <label>Contract Pending TC Revision</label>
    <type>Checkbox</type>
</CustomField>