force-app/main/default/objects/Line_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <formula>BLANKVALUE( Nymex_Rollup__c, 0) + BLANKVALUE( Fin_Basis_Rollup__c, 0) + BLANKVALUE( Phy_Prem_Rollup__c, 0)</formula>
    <label>Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>