force-app/main/default/objects/Line_Item__c/fields/Cost_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Cost_Wacog__c</fullName>
    <formula>BLANKVALUE( Nymex_Rollup_Wacog__c, 0) + BLANKVALUE( Fin_Basis_Rollup_Wacog__c, 0) + BLANKVALUE( Phy_Prem_Rollup_Wacog__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>