force-app/main/default/objects/Line_Item__c/fields/Daily_Volume_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Daily_Volume_Rollup__c</fullName>
    <label>Daily Volume Rollup</label>
    <summarizedField>Line_Item_Day__c.Volume__c</summarizedField>
    <summaryForeignKey>Line_Item_Day__c.Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>