force-app/main/default/objects/Line_Item__c/fields/Ending_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ending_Balance__c</fullName>
    <label>Ending Balance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>