force-app/main/default/objects/Line_Item__c/fields/Ending_Pctg__c.field-meta.xml
<CustomField>
    <fullName>Ending_Pctg__c</fullName>
    <label>Ending %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>