force-app/main/default/objects/Line_Item__c/fields/Forecasted_Volume__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Volume__c</fullName>
    <label>Forecasted Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>