force-app/main/default/objects/Line_Item__c/fields/Keepwhole_OFO_Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_OFO_Over_Adder__c</fullName>
    <label>Keepwhole OFO Over Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>