force-app/main/default/objects/Line_Item__c/fields/Keepwhole_OFO_Over_Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_OFO_Over_Calc_Type__c</fullName>
    <label>Keepwhole OFO Calc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>