force-app/main/default/objects/Line_Item__c/fields/Keepwhole_OFO_Over_Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_OFO_Over_Tolerance__c</fullName>
    <label>Keepwhole OFO Tolerance %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>