force-app/main/default/objects/Line_Item__c/fields/Keepwhole_Over_Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Over_Calc_Type__c</fullName>
    <label>Keepwhole Calc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>