force-app/main/default/objects/Line_Item__c/fields/Keepwhole_Over_Index__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Over_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Keepwhole Over Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Keepwhole Over Index</relationshipLabel>
    <relationshipName>Keepwhole_Over_Index</relationshipName>
    <type>Lookup</type>
</CustomField>