force-app/main/default/objects/Line_Item__c/fields/Keepwhole_Under_Adder_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Under_Adder_Wacog__c</fullName>
    <label>X_Keepwhole Under Adder Wacog</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>