force-app/main/default/objects/Line_Item__c/fields/Keepwhole_Under_Index__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Under_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X_Keepwhole Under Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Keepwhole Under Index</relationshipLabel>
    <relationshipName>Keepwhole_Under_Index</relationshipName>
    <type>Lookup</type>
</CustomField>