force-app/main/default/objects/Line_Item__c/fields/Keepwhole_Under_TC__c.field-meta.xml
<CustomField>
    <fullName>Keepwhole_Under_TC__c</fullName>
    <label>X_Keepwhole Under TC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>