force-app/main/default/objects/Line_Item__c/fields/Needed_for_Contract_Rolling__c.field-meta.xml
<CustomField>
    <fullName>Needed_for_Contract_Rolling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needed for Contract Rolling</label>
    <type>Checkbox</type>
</CustomField>