force-app/main/default/objects/Line_Item__c/fields/Nymex_Lock_Volume__c.field-meta.xml
<CustomField>
    <fullName>Nymex_Lock_Volume__c</fullName>
    <label>Nymex Lock Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>