force-app/main/default/objects/Line_Item__c/fields/Nymex_Rollup_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Nymex_Rollup_Wacog__c</fullName>
    <label>X Nymex Wacog</label>
    <summarizedField>Line_Item_Fee__c.Wacog_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>Line_Item_Fee__c.Cost_Group_Direct__c</field>
        <operation>equals</operation>
        <value>01 - NYMEX</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Line_Item_Fee__c.Include_in_Cost_Rollup_Direct__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Line_Item_Fee__c.Fee_Volume_Type_Direct__c</field>
        <operation>equals</operation>
        <value/>
    </summaryFilterItems>
    <summaryForeignKey>Line_Item_Fee__c.Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>