force-app/main/default/objects/Line_Item__c/fields/Parent_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Line Items (Parent Line Item)</relationshipLabel>
    <relationshipName>Line_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>