force-app/main/default/objects/Line_Item__c/fields/Parent_Storage_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Storage_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Storage Line Item</label>
    <referenceTo>Line_Item__c</referenceTo>
    <relationshipLabel>Storage Line Items</relationshipLabel>
    <relationshipName>Storage_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>