force-app/main/default/objects/Line_Item__c/fields/Phy_Prem_Lock_Volume__c.field-meta.xml
<CustomField>
    <fullName>Phy_Prem_Lock_Volume__c</fullName>
    <label>Phy Prem Lock Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>