force-app/main/default/objects/Line_Item__c/fields/Pricing_Index__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Pricing Index</relationshipLabel>
    <relationshipName>Pricing_Index</relationshipName>
    <type>Lookup</type>
</CustomField>