force-app/main/default/objects/Line_Item__c/fields/Quote_Base_Consultant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Quote_Base_Consultant_Fee__c</fullName>
    <inlineHelpText>For fixed quote line items: Weighted average of consultant fee from quote contracts&#39; base contracts</inlineHelpText>
    <label>Quote Base Consultant Fee</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>