force-app/main/default/objects/Line_Item__c/fields/Remaining_Basis_Volume__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Basis_Volume__c</fullName>
    <formula>Volume__c -  Basis_Lock_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Basis Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>