force-app/main/default/objects/Line_Item__c/fields/Remaining_Nymex_Volume__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Nymex_Volume__c</fullName>
    <formula>Volume__c - Nymex_Lock_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Nymex Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>