force-app/main/default/objects/Line_Item__c/fields/Remaining_Phy_Prem_Volume__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Phy_Prem_Volume__c</fullName>
    <formula>Volume__c - Phy_Prem_Lock_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Phy Prem Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>