force-app/main/default/objects/Line_Item__c/fields/Surrendered_Storage_Volume__c.field-meta.xml
<CustomField>
    <fullName>Surrendered_Storage_Volume__c</fullName>
    <label>Surrendered Storage Volume</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>