force-app/main/default/objects/Line_Item__c/fields/Term_Extension__c.field-meta.xml
<CustomField>
    <fullName>Term_Extension__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Term Extension</label>
    <referenceTo>Term_Extension__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>