force-app/main/default/objects/Line_Item__c/fields/Total_CES_Margin__c.field-meta.xml
<CustomField>
    <fullName>Total_CES_Margin__c</fullName>
    <description>NEW - Total CES margin for rep margin and margin approvals.</description>
    <formula>Total_Margin_Rollup__c *  Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CES Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>