force-app/main/default/objects/Line_Item__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>X Trigger Type</label>
    <referenceTo>Trigger_Type__c</referenceTo>
    <relationshipLabel>Trigger Type Line Items</relationshipLabel>
    <relationshipName>Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>