force-app/main/default/objects/Line_Item__c/recordTypes/Contract_Detail.recordType-meta.xml
<RecordType>
    <fullName>Contract_Detail</fullName>
    <active>true</active>
    <label>Contract Detail</label>
</RecordType>